--- a/playground/async-await.html
+++ b/playground/async-await.html
@@ -10,7 +10,61 @@
 
 <body>
   <script>
+    function wait(ms = 0) {
+      return new Promise((resolve) => {
+        setTimeout(resolve, ms);
+      });
+    }
 
+    function makePizza(toppings = []) {
+      return new Promise((resolve, reject) => {
+        // reject if people try with pineapple
+        if (toppings.includes('pineapple')) {
+          reject('Seriously? Get out 🍍');
+        }
+        const amountOfTimeToBake = 500 + toppings.length * 200;
+        // wait 1 second for the pizza to cook:
+        setTimeout(() => {
+          // when you are ready, you can resolve this promise
+          resolve(`Here is your pizza 🍕 with the toppings ${toppings.join(' ')}`);
+        }, amountOfTimeToBake);
+        // if something went wrong, we can reject this promise;
+      });
+    }
+
+    async function go() {
+      console.log('Starting');
+      await wait(2000);
+      console.log('running');
+      await wait(200);
+      console.log('ending');
+    }
+
+    go();
+
+    async function makeDinner() {
+      const pizza1Promise = makePizza(['pepperoni']);
+      const pizza2Promise = makePizza(['mushrooms']);
+      const [pep, mush] = await Promise.all([pizza1Promise, pizza2Promise]);
+      console.log(pep);
+      console.log(mush);
+    }
+
+    makeDinner();
+    // // Function declaration
+    // async function fd() { }
+
+    // // Arrow function
+    // const arrowFn = async () => { };
+
+    // // Callback function
+    // window.addEventListener('click', async () => { });
+
+    // // Methods
+    // const person = {
+    //   async sayHi() { },
+    //   sayHey: async () => { },
+    // };
   </script>
 </body>
 
