--- a/playground/bind-call-apply.html
+++ b/playground/bind-call-apply.html
@@ -9,7 +9,57 @@
 </head>
 
 <body>
+  <p>hey</p>
+  <button>Click me</button>
+  <div class="wrapper">
+    <p>Hey I'm in a wrapper</p>
+  </div>
+  <script>
+    // If we don't use the bind keyword then the method won't be bound to the object and can be bound anywhere
+    const person = {
+      name: 'GrimFunk',
+      sayHi() {
+        return `hey ${this.name}`;
+      },
+    };
 
+    const jenna = { name: 'Jenna' };
+
+    const sayHi = person.sayHi.bind(person);
+
+    // QS example
+    // By calling bind against query selector, we say when the $ function is run, use `document` as the `this` value
+    const $ = document.querySelector.bind(document);
+
+    const bill = {
+      total: 1000,
+      calculate(taxRate) {
+        return this.total + this.total * taxRate;
+      },
+      describe(mealType, drinkType, taxRate) {
+        return `Your meal of ${mealType} with a drink of ${drinkType} was ${this.calculate(
+          taxRate
+        )}`;
+      },
+    };
+
+    const totalWithTax = bill.calculate(0.13);
+    console.log(totalWithTax);
+    const calc = bill.calculate.bind({ total: 500 }, 0.06);
+    console.log(calc(0.13));
+
+    const total2 = bill.calculate.call({ total: 500 }, 0.06);
+    console.log(total2);
+
+    const total3 = bill.calculate.apply({ total: 500 }, [0.6]);
+    console.log(total3);
+
+    const myMeal = bill.describe.call(bill, 'pizza', 'beer', 0.13);
+    console.log(myMeal);
+
+    const myMeal2 = bill.describe.apply(bill, ['burger', 'wine', 0.2]);
+    console.log(myMeal2);
+  </script>
 </body>
 
 </html>
