--- a/playground/new-this.html
+++ b/playground/new-this.html
@@ -30,7 +30,31 @@
       this.toppings = toppings;
       this.customer = customer;
       this.id = Math.floor(Math.random() * 16777215).toString(16);
+      this.slices = 10;
+      // this.eat = function () {
+      //   if (this.slices > 0) {
+      //     this.slices -= 1;
+      //     console.log(`CHOMP you now have ${this.slices} left!`);
+      //   } else {
+      //     console.log(`Sorry! No slices left!`);
+      //   }
+      // };
     }
+
+    Pizza.prototype.eat = function () {
+      if (this.slices > 0) {
+        this.slices -= 1;
+        console.log(`CHOMP you now have ${this.slices} left!`);
+      } else {
+        console.log(`Sorry! No slices left!`);
+      }
+    };
+
+    Pizza.prototype.describe = function () {
+      return `This pizza is for ${this.customer
+        }, with the toppings ${this.toppings.join(', ')} and there are ${this.slices
+        } left`;
+    };
 
     const pepperoniPizza = new Pizza(['pepperoni'], 'GrimFunk');
     const canadianPizza = new Pizza(['pepperoni', 'mushrooms', 'olives'], 'BigBoi');
@@ -53,6 +77,8 @@
 
     // button1.addEventListener('click', tellMeAboutTheButton);
     // button2.addEventListener('click', tellMeAboutTheButton);
+
+    // Prototypes and Prototypal Inheritance //
   </script>
 </body>
 
